Fix ftyles of footer links on mobiles

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1392,6 +1392,12 @@ p {
     }
 }
 
+.form__question-checkbox-wrap input, 
+.form__contact-checkbox-wrap input {
+    width: 24px;
+    height: 24px;
+}
+
 .form__question-checkbox-label, 
 .form__contact-checkbox-label {
     font-size: 14px;
@@ -1494,8 +1500,10 @@ p {
 
 .footer__links {
     display: flex;
+    flex-wrap: wrap;
     gap: 16px;
-    margin-bottom: 32px
+    margin-bottom: 32px;
+
 }
 
 .footer__link {
@@ -1932,10 +1940,6 @@ p {
     font-size: 18px;
     color: rgba(34, 34, 34, 1);
     font-weight: 600;
-}
-
-.juridical__info p {
-    margin-bottom: 0;
 }
 
 @media (max-width:990px) {
